--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,7 +53,13 @@
                     <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
                 </div>
             </div>
+        </div>
 
+        <div class="row">
+            <div th:each="artl : ${articles}">
+                <div class="col-lg-12" th:text="${artl.getTitle()}"></div>
+                <div th:text="${artl.getContent()}"></div>
+            </div>
         </div>
     </div>
 
