--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,8 +17,25 @@
 </head>
 
 <body>
-    <div class="container">
-        <header class="jumbotron">
+<!--    <div class="nav-scroller bg-white shadow-sm text-muted">-->
+<!--        <nav class="nav nav-underline ml-3 mr-3">-->
+<!--            <a class="nav-link active" href="#">Dashboard</a>-->
+<!--            <a class="nav-link" href="#">-->
+<!--                Articles-->
+<!--                <span class="badge badge-pill bg-light align-text-bottom" th:text="${articles.size()}">27</span>-->
+<!--            </a>-->
+<!--            <a class="nav-link" th:href="@{/articles}" href="#">Explore</a>-->
+<!--            <a class="nav-link" href="#">Suggestions</a>-->
+<!--            <a class="nav-link" href="#">Link</a>-->
+<!--            <a class="nav-link" href="#">Link</a>-->
+<!--            <a class="nav-link" href="#">Link</a>-->
+<!--            <a class="nav-link" href="#">Link</a>-->
+<!--            <a class="nav-link" href="#">Link</a>-->
+<!--        </nav>-->
+<!--    </div>-->
+
+    <div class="container profile">
+        <header class="jumbotron pb-1">
             <div class="row text-center mb-5" style="display:block">
                 <h1 id="site-title"><span id="givenName">Leichen</span> <span id="familyName">Zhou</span> <wbr>|<wbr>
                     <ruby>
@@ -36,6 +53,7 @@
                 </div>
                 <div class="col-8">
                     <p class="float-left">
+<!--                        &nbsp;&nbsp;&nbsp;&nbsp;-->
                         An Engineering Master at Northeastern University - Seattle campus.
                         My major is Computer Software Engineering and have engaged in<span itemprop="knowsAbout">algorithms</span>, <span itemprop="knowsAbout">web application development</span> and <span itemprop="knowsAbout">cloud service</span>. I'm also interested in more applied application or architecture with nice theoretical components.
                         Here is my <a href="files/cv.pdf" th:href="@{/files/cv.pdf}">CV</a>(last updated May 2019).
@@ -44,24 +62,111 @@
             </div>
         </header>
 
-        <div class="row">
-            <div class="media col-lg-12">
-                <img src="..." class="align-self-start mr-3" alt="...">
-                <div class="media-body">
-                    <h5 class="mt-0">Top-aligned media</h5>
-                    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-                    <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-                </div>
+<!--        <div class="row">-->
+<!--            <div class="media col-lg-12">-->
+<!--                <img src="..." class="align-self-start mr-3" alt="...">-->
+<!--                <div class="media-body">-->
+<!--                    <h5 class="mt-0">Top-aligned media</h5>-->
+<!--                    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>-->
+<!--                    <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+
+    </div>
+
+    <main role="main" class="container">
+<!--        <div class="d-flex align-items-center p-3 my-3 text-white-50 bg-purple rounded shadow-sm">-->
+<!--            <img class="mr-3" src="/docs/4.4/assets/brand/bootstrap-outline.svg" alt="" width="48" height="48">-->
+<!--            <div class="lh-100">-->
+<!--                <h6 class="mb-0 text-white lh-100">Bootstrap</h6>-->
+<!--                <small>Since 2011</small>-->
+<!--            </div>-->
+<!--        </div>-->
+
+        <div class="my-3 p-3 bg-white rounded shadow-sm">
+            <h6 class="border-bottom border-gray pb-3 mb-0">Recent updates</h6>
+<!--            <div class="media text-muted pt-3">-->
+<!--            <div class="media pt-3">-->
+<!--                <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>-->
+<!--                <p class="media-body pb-4 mb-0 small lh-125 border-bottom border-gray">-->
+<!--                    <strong class="d-block text-gray-dark">@username</strong>-->
+<!--                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.-->
+<!--                </p>-->
+<!--            </div>-->
+
+            <!--        <div class="row">-->
+            <!--            <div th:each="artl : ${articles}">-->
+            <!--                <div class="col-lg-12" th:text="${artl.getTitle()}"></div>-->
+            <!--                <div th:text="${artl.getContent()}"></div>-->
+            <!--            </div>-->
+            <!--        </div>-->
+
+            <div class="media pt-3" th:each="article : ${articles}">
+<!--                <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>@[[${article.getTitle()}]]</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>-->
+                <p class="media-body pb-2 mb-0 small lh-125 border-bottom border-gray">
+                    <strong class="d-block text-gray-dark pd-1" th:href="@{/order/{articleId}(articleId=${article.getId()})}">[[${article.getTitle()}]]</strong>
+                    <strong class="d-block text-gray-dark pb-1">@[[${article.getAuthor()}]]</strong>
+<!--                    <div th:text="${article.getContent()}"></div>-->
+                    [[${article.getContent()}]]
+                </p>
             </div>
+<!--            <div class="media text-muted pt-3">-->
+<!--                <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#e83e8c"/><text x="50%" y="50%" fill="#e83e8c" dy=".3em">32x32</text></svg>-->
+<!--                <p class="media-body pb-4 mb-0 small lh-125 border-bottom border-gray">-->
+<!--                    <strong class="d-block text-gray-dark">@username</strong>-->
+<!--                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.-->
+<!--                </p>-->
+<!--            </div>-->
+<!--            <div class="media text-muted pt-3">-->
+<!--                <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#6f42c1"/><text x="50%" y="50%" fill="#6f42c1" dy=".3em">32x32</text></svg>-->
+<!--                <p class="media-body pb-4 mb-0 small lh-125 border-bottom border-gray">-->
+<!--                    <strong class="d-block text-gray-dark">@username</strong>-->
+<!--                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.-->
+<!--                </p>-->
+<!--            </div>-->
+            <small class="d-block text-right mt-3">
+                <a href="#" th:href="@{/articles}">All updates</a>
+            </small>
         </div>
 
-        <div class="row">
-            <div th:each="artl : ${articles}">
-                <div class="col-lg-12" th:text="${artl.getTitle()}"></div>
-                <div th:text="${artl.getContent()}"></div>
+        <div class="my-3 p-3 bg-white rounded shadow-sm">
+            <h6 class="border-bottom border-gray pb-2 mb-0">Suggestions</h6>
+            <div class="media text-muted pt-3">
+                <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
+                <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+                    <div class="d-flex justify-content-between align-items-center w-100">
+                        <strong class="text-gray-dark">Full Name</strong>
+                        <a href="#">Follow</a>
+                    </div>
+                    <span class="d-block">@username</span>
+                </div>
             </div>
+            <div class="media text-muted pt-3">
+                <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
+                <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+                    <div class="d-flex justify-content-between align-items-center w-100">
+                        <strong class="text-gray-dark">Full Name</strong>
+                        <a href="#">Follow</a>
+                    </div>
+                    <span class="d-block">@username</span>
+                </div>
+            </div>
+            <div class="media text-muted pt-3">
+                <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
+                <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+                    <div class="d-flex justify-content-between align-items-center w-100">
+                        <strong class="text-gray-dark">Full Name</strong>
+                        <a href="#">Follow</a>
+                    </div>
+                    <span class="d-block">@username</span>
+                </div>
+            </div>
+            <small class="d-block text-right mt-3">
+                <a href="#">All suggestions</a>
+            </small>
         </div>
-    </div>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
