--- a/src/main/resources/templates/article/dashboard.html
+++ b/src/main/resources/templates/article/dashboard.html
@@ -61,7 +61,7 @@
 						<div class="btn-toolbar mb-2 mb-md-0">
 							<div class="btn-group mr-2">
 								<a th:href="@{/article}" class="btn btn-sm btn-outline-secondary">add</a>
-								<button class="btn btn-sm btn-outline-secondary">Share</button>
+								<a class="btn btn-sm btn-outline-secondary" th:href="@{/articles}">post</a>
 								<button class="btn btn-sm btn-outline-secondary">Export</button>
 							</div>
 							<button class="btn btn-sm btn-outline-secondary dropdown-toggle">
