uploat content, as well as adjust displaying

--- a/src/main/resources/templates/article/articles.html
+++ b/src/main/resources/templates/article/articles.html
@@ -11,31 +11,18 @@
 </head>
     <body>
 
-        <div class="nav-scroller bg-white shadow-sm text-muted ml-5 mr-5" th:if="${session.loginUser != null}">
+<!--        <div class="nav-scroller bg-white sha dow-sm text-muted ml-5 mr-5" th:if="${session.loginUser != null}">-->
+        <div class="nav-scroller bg-white sha dow-sm text-muted ml-5 mr-5">
             <nav class="nav nav-underline ml-3 mr-3">
-                <a class="nav-link active" th:href="@{/dashboard}">Dashboard</a>
+                <a class="nav-link active" th:href="@{/dashboard}"  th:if="${session.loginUser != null}">Dashboard</a>
                 <a class="nav-link">
                     Articles
                     <span class="badge badge-pill bg-light align-text-bottom" th:text="${articles.size()}" th:href="@{/articles}">27</span>
                 </a>
-<!--                <a class="nav-link" href="#">Link</a>-->
-<!--                <a class="nav-link" href="#">Link</a>-->
             </nav>
         </div>
 
         <main role="main">
-
-<!--            <section class="jumbotron text-center">-->
-<!--                <div class="container">-->
-    <!--                <h1>Welcome to All</h1>-->
-    <!--                <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>-->
-    <!--                <p>-->
-    <!--                    <a href="#" class="btn btn-primary my-2">Main call to action</a>-->
-    <!--                    <a href="#" class="btn btn-secondary my-2">Secondary action</a>-->
-    <!--                </p>-->
-<!--                </div>-->
-<!--            </section>-->
-
             <div class="album py-5 bg-light">
                 <div class="container">
 
@@ -43,25 +30,6 @@
                         Post
                     </h1>
 
-<!--                    <div class="row">-->
-<!--                        <div class="col-md-4" th:each="article:${articles}">-->
-<!--                            <div class="card mb-4 shadow-sm">-->
-<!--                                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>-->
-<!--                                <div class="card-body">-->
-<!--                                    <p class="card-text" th:text="${article.getTitle()}">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>-->
-<!--                                    <div class="d-flex justify-content-between align-items-center">-->
-<!--    &lt;!&ndash;                                    <p class="card-text" th:text="${article.getTitle()}">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>&ndash;&gt;-->
-<!--    &lt;!&ndash;                                                                        // can only be seen from backend&ndash;&gt;-->
-<!--    &lt;!&ndash;                                    <div class="btn-group">&ndash;&gt;-->
-<!--                                            <a type="button" class="btn btn-sm btn-outline-secondary" th:href="@{/article/{articleId}(articleId = ${article.getId()})}">View</a>-->
-<!--    &lt;!&ndash;                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>&ndash;&gt;-->
-<!--    &lt;!&ndash;                                    </div>&ndash;&gt;-->
-<!--                                        <small class="text-muted" th:text="${#dates.format(article.getTimestamp(), 'dd/MMM/yyyy')}"}>9 mins</small>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
 
                     <div class="row mb-2" th:each="article:${articles}">
                         <div class="col-md-6 text-left">
