--- a/src/main/resources/templates/article/articles.html
+++ b/src/main/resources/templates/article/articles.html
@@ -14,7 +14,8 @@
 <!--        <div class="nav-scroller bg-white sha dow-sm text-muted ml-5 mr-5" th:if="${session.loginUser != null}">-->
         <div class="nav-scroller bg-white sha dow-sm text-muted ml-5 mr-5">
             <nav class="nav nav-underline ml-3 mr-3">
-                <a class="nav-link active" th:href="@{/dashboard}"  th:if="${session.loginUser != null}">Dashboard</a>
+<!--                <a class="nav-link active" th:href="@{/dashboard}"  th:if="${session.loginUser != null}">Dashboard</a>-->
+                <a class="nav-link active" th:href="@{/dashboard}">Dashboard</a>
                 <a class="nav-link">
                     Articles
                     <span class="badge badge-pill bg-light align-text-bottom" th:text="${articles.size()}" th:href="@{/articles}">27</span>
