--- a/src/main/resources/templates/article/dashboard.html
+++ b/src/main/resources/templates/article/dashboard.html
@@ -47,8 +47,11 @@
 			<input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
 			<ul class="navbar-nav px-3">
 				<li class="nav-item text-nowrap">
-					<a class="nav-link" href="http://getbootstrap.com/docs/4.0/examples/dashboard/#">Sign out</a>
+					<a class="nav-link" th:href="@{/logout}">Sign out</a>
 				</li>
+<!--				<form th:href="@{/logout}" method="post">-->
+<!--					<input type="submit" value="Logout">-->
+<!--				</form>-->
 			</ul>
 		</nav>
 
