--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 	</head>
 
 	<body class="text-center">
-		<form class="form-signin" action="article/dashboard.html" th:action="@{/user/login}" th:method="POST">
+		<form class="form-signin" action="article/dashboard.html" th:action="@{/login}" th:method="POST">
 			<img class="mb-4" src="asserts/img/bootstrap-solid.svg" th:src="@{/asserts/img/bootstrap-solid.svg}" alt="" width="72" height="72">
 			<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
 			<p style="color: red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
@@ -23,11 +23,13 @@
 			<input type="password" name="password" class="form-control" placeholder="Password" required="">
 			<div class="checkbox mb-3">
 				<label>
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
+          			<input type="checkbox" value="remember-me"> Remember me
+        		</label>
 			</div>
 			<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+			<a class="btn btn btn-lg btn-primary btn-block" th:href="@{/index}">Back</a>
 		</form>
+		<a class="btn btn-lg btn-primary btn-block" th:href="@{/index}">Back</a>
 
 		<!-- Bootstrap core JavaScript
     	================================================== -->
