--- a/src/main/resources/templates/article/articles.html
+++ b/src/main/resources/templates/article/articles.html
@@ -16,7 +16,7 @@
             <nav class="nav nav-underline ml-3 mr-3">
 <!--                <a class="nav-link active" th:href="@{/dashboard}"  th:if="${session.loginUser != null}">Dashboard</a>-->
                 <a class="nav-link active" th:href="@{/dashboard}">Dashboard</a>
-                <a class="nav-link">
+                <a class="nav-link" th:href="@{/articles}">
                     Articles
                     <span class="badge badge-pill bg-light align-text-bottom" th:text="${articles.size()}" th:href="@{/articles}">27</span>
                 </a>
