--- a/src/main/resources/templates/article/detail.html
+++ b/src/main/resources/templates/article/detail.html
@@ -6,6 +6,9 @@
         <meta name="author" content="">
         <title th:text="${foundArticle.getTitle()}"></title>
 
+        <!-- Editor.md preview css -->
+        <link rel="stylesheet" th:href="@{/libs/editormd/css/editormd.preview.css}">
+
         <!-- Bootstrap core CSS -->
         <link href="asserts/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/4.4.1/css/bootstrap.css}" rel="stylesheet">
         <!-- Custom styles for this template -->
@@ -14,21 +17,33 @@
         <link href="https://fonts.googleapis.com/css?family=Ma+Shan+Zheng&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
 
-        <!--        google fonts-->
+        <!-- google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Gelasio:400i&display=swap" rel="stylesheet">
     </head>
 
-    <body class="mt-5">
+    <body>
+        <div class="nav-scroller bg-white sha dow-sm text-muted ml-5 mr-5">
+            <nav class="nav nav-underline ml-3 mr-3">
+                <!-- <a class="nav-link active" th:href="@{/dashboard}"  th:if="${session.loginUser != null}">Dashboard</a>-->
+                <a class="nav-link active" th:href="@{/dashboard}">Dashboard</a>
+                <a class="nav-link" th:href="@{/articles}">
+                    Articles
+                    <!-- <span class="badge badge-pill bg-light align-text-bottom" th:text="${articles.size()}" th:href="@{/articles}">27</span>-->
+                </a>
+            </nav>
+        </div>
+
         <div class="container-fluid">
             <main>
                 <article>
                     <h1 class="border-bottom border-dark" th:text="${foundArticle.getTitle()}"></h1>
 
-                    <div>
-                        <p th:text="${foundArticle.getContent()}">
-                            article content
-                        </p>
+                    <!-- editor.md preview -->
+                    <div id="article-markdown-view">
+                        <!-- Server-side output Markdown text -->
+                        <textarea style="display:none;" th:text="${foundArticle.getContent()}"></textarea>
                     </div>
+
                 </article>
             </main>
 
@@ -41,6 +56,24 @@
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+        <!-- javascript
+        ============================== -->
+        <script th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
+        <script th:src="@{/libs/editormd/editormd.js}"></script>
+        <script th:src="@{/libs/editormd/lib/marked.min.js}"></script>
+        <script th:src="@{/libs/editormd/lib/prettify.min.js}"></script>
+
+        <script type="text/javascript">
+            $(function() {
+                var testView = editormd.markdownToHTML("article-markdown-view", {
+                    // markdown : "[TOC]\n### Hello world!\n## Heading 2", // Also, you can dynamic set Markdown text
+                    // htmlDecode : true,  // Enable / disable HTML tag encode.
+                    // htmlDecode : "style,script,iframe",  // Note: If enabled, you should filter some dangerous HTML tags for website security.
+                });
+            });
+        </script>
+        <!-- ========================= -->
     </body>
 
 </html>
