optimized the security strategy; prettified the layout, as well as displaying

--- a/src/main/resources/static/asserts/css/dashboard.css
+++ b/src/main/resources/static/asserts/css/dashboard.css
@@ -95,3 +95,13 @@ body {
 .article-list{
   margin: auto;
 }
+
+.nav {
+  margin: auto;
+  padding-top: 20px;
+  font-size: 1.5em;
+}
+
+.link-logout {
+  text-align: right;
+}
