--- a/src/main/resources/templates/article/detail.html
+++ b/src/main/resources/templates/article/detail.html
@@ -33,10 +33,10 @@
             </nav>
         </div>
 
-        <div class="container-fluid">
+        <div class="container-fluid article-content">
             <main>
                 <article>
-                    <h1 class="border-bottom border-dark" th:text="${foundArticle.getTitle()}"></h1>
+                    <h1 class="article-title" th:text="${foundArticle.getTitle()}"></h1>
 
                     <!-- editor.md preview -->
                     <div id="article-markdown-view">
